--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -130,4 +129,5 @@ dmypy.json
 
 # 
 checkpoints/
-results/
+external/
+# results/
