--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-numpy
+
 imageio
 matplotlib
-scikit-image
-opencv-python
-tqdm
+scikit-image==0.17.2
+opencv-python==4.5.5.62
 
 git+https://github.com/facebookresearch/segment-anything.git
+
+imageio-ffmpeg
+pandas==1.1.5
+argparse
+cython
+scipy
+onnxruntime==1.10.0
+gradio==2.9.4
+
+open3d==0.13.0
+trimesh==3.9.36
+# rtree==1.0.0
